tests/errors/pattern-macro-type-domain.ari
meta fn make_pattern(input: type) -> type {
}

fn main() -> i64 {
  let value = 1;
  match value {
    make_pattern!({ Some(_) }) => {
      return 0;
    }
    _ => {
      return 1;
    }
  }
}
